--- a/index.html
+++ b/index.html
@@ -17,176 +17,134 @@
         <div class="container text-center">
             <h1 class="display-4">Work Day Scheduler</h1>
             <p class="lead">Enter your tasks for each hour below.<br>
-            <span id="today"></span></p>           
+                <span id="today"></span></p>
         </div>
     </div>
 
     <div class="container text-center">
-        <div class="row" id="hour" value="9">
+        <div class="row" id="nine">
             <div class="col-lg-1" id="timeSquare">
                 <p>9 a.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" time="9" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="9" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="10">
+        <div class="row" id="ten">
             <div class="col-lg-1" id="timeSquare">
                 <p>10 a.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="10" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="11">
-            <div class="col-lg-1" id="timeSquare">
+        <div class="row" id="eleven">
+            <div class="col-lg-1" id="timeSquare" >
                 <p>11 a.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="11" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="12">
+        <div class="row" id="twelve">
             <div class="col-lg-1" id="timeSquare">
                 <p>12 p.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="12" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="1">
+        <div class="row" id="one">
             <div class="col-lg-1" id="timeSquare">
                 <p>1 p.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="1" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="2">
+        <div class="row" id="two">
             <div class="col-lg-1" id="timeSquare">
                 <p>2 p.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="2" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="3">
+        <div class="row" id="three">
             <div class="col-lg-1" id="timeSquare">
                 <p>3 p.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="3" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="4">
+        <div class="row" id="four">
             <div class="col-lg-1" id="timeSquare">
                 <p>4 p.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="4" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
 
-        <div class="row" id="hour" value="5">
+        <div class="row" id="five">
             <div class="col-lg-1" id="timeSquare">
                 <p>5 p.m.</p>
             </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3">
+                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                    <button class="btn btn-outline-secondary" type="button" time="5" id="submit">Save</button>
                 </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
             </div>
         </div>
 
-
-        <div class="row" id="hour" value="6">
-            <div class="col-lg-1" id="timeSquare">
-                <p>6 p.m.</p>
-            </div>
-            <div class="input-group col-lg-10 mb-3">
-                <input type="text" class="form-control" placeholder="Stuff to do ...">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
-                </div>
-            </div>
-            <div class="col-lg-1" id="doneBox">
-                <p>DONE</p>
-            </div>
-        </div>
 
 
 
     </div>
 
     <script src="moment.min.js"></script>
-    <script src= "javascript.js"></script>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
