--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 
     <div class="jumbotron">
         <div class="container text-center">
-            <h1 class="display-4">Work Day Scheduler</h1>
-            <p class="lead">Enter your tasks for each hour below.<br>
+            <h1 class="display-4" style="text-align: center">Work Day Scheduler</h1>
+            <p class="lead" style="text-align: center">Enter your tasks for each hour below.<br>
                 <span id="today"></span></p>
         </div>
     </div>
 
     <div class="container text-center">
-        <div class="row" id="nine">
+
+
+        <div class="row" id="rowNine">
             <div class="col-lg-1" id="timeSquare">
                 <p>9 a.m.</p>
             </div>
-            <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" time="9" class="form-control" placeholder="Stuff to do ...">
+            <div class="input-group col-lg-11 mb-3" mt="9">
+                <input type="text" id="input9" mt="9" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="9" id="submit">Save</button>
                 </div>
@@ -35,12 +37,12 @@
         </div>
 
 
-        <div class="row" id="ten">
+        <div class="row" id="rowTen">
             <div class="col-lg-1" id="timeSquare">
                 <p>10 a.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input10" mt="10" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="10" id="submit">Save</button>
                 </div>
@@ -48,12 +50,12 @@
         </div>
 
 
-        <div class="row" id="eleven">
-            <div class="col-lg-1" id="timeSquare" >
+        <div class="row" id="rowEleven">
+            <div class="col-lg-1" id="timeSquare">
                 <p>11 a.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input11" mt="11" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="11" id="submit">Save</button>
                 </div>
@@ -61,12 +63,12 @@
         </div>
 
 
-        <div class="row" id="twelve">
+        <div class="row" id="rowTwelve">
             <div class="col-lg-1" id="timeSquare">
                 <p>12 p.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input12" mt="12" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="12" id="submit">Save</button>
                 </div>
@@ -74,12 +76,12 @@
         </div>
 
 
-        <div class="row" id="one">
+        <div class="row" id="rowOne">
             <div class="col-lg-1" id="timeSquare">
                 <p>1 p.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input1" mt="13" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="1" id="submit">Save</button>
                 </div>
@@ -87,12 +89,12 @@
         </div>
 
 
-        <div class="row" id="two">
+        <div class="row" id="rowTwo">
             <div class="col-lg-1" id="timeSquare">
                 <p>2 p.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input2" mt="14" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="2" id="submit">Save</button>
                 </div>
@@ -100,12 +102,12 @@
         </div>
 
 
-        <div class="row" id="three">
+        <div class="row" id="rowThree">
             <div class="col-lg-1" id="timeSquare">
                 <p>3 p.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input3" mt="15" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="3" id="submit">Save</button>
                 </div>
@@ -113,12 +115,12 @@
         </div>
 
 
-        <div class="row" id="four">
+        <div class="row" id="rowFour">
             <div class="col-lg-1" id="timeSquare">
                 <p>4 p.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input4" mt="16" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="4" id="submit">Save</button>
                 </div>
@@ -126,12 +128,12 @@
         </div>
 
 
-        <div class="row" id="five">
+        <div class="row" id="rowFive">
             <div class="col-lg-1" id="timeSquare">
                 <p>5 p.m.</p>
             </div>
             <div class="input-group col-lg-11 mb-3">
-                <input type="text" id="toDoItem" class="form-control" placeholder="Stuff to do ...">
+                <input type="text" id="input5" mt="17" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="5" id="submit">Save</button>
                 </div>
