added date to the time span

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-lg-1" id="timeSquare">
                 <p>9 a.m.</p>
             </div>
-            <div class="input-group col-lg-11 mb-3" mt="9">
+            <div class="input-group col-lg-11 mb-3">
                 <input type="text" id="input9" mt="9" class="form-control" placeholder="Stuff to do ...">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" time="9" id="submit">Save</button>
